css/main.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap");

/* Variables */
/* End Variables */

/* Global section */
* {
  padding: 0;
  margin: 0;
  user-select: none;
  -webkit-user-drag: none;
  color: white;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Montserrat", sans-serif;
  background: #121212;
  font-size: 10px;
  color: white;
  display: flex;
  align-items: center;
  flex-direction: column;
  overflow-x: hidden;
}

.title {
  font-size: 3rem;
  gap: unset;
}

.title span {
  color: teal;
  text-shadow: 0 0 0.5rem teal;
}

.subtitle {
  font-size: 1rem;
  max-width: 400px;
  text-align: center;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.show {
  display: unset;
}

.hide {
  display: none;
}

.icon {
  height: 2rem;
  width: 2rem;
}

.button {
  background: linear-gradient(
    135deg,
    rgba(255, 255, 255, 0.05),
    rgba(0, 0, 0, 0.3)
  );
  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.15),
    5px 5px 10px rgba(0, 0, 0, 0.6);
  border-radius: 20px;
}

.button:hover {
  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.15),
    5px 5px 10px rgba(0, 0, 0, 0.6),
    inset -5px -5px 10px rgba(255, 255, 255, 0.15),
    inset 5px 5px 10px rgba(0, 0, 0, 0.6);
}
/* End Global section */

/* Header section */
header {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: calc(100% - 2rem);
  padding: 5rem 1rem;
  backdrop-filter: blur(10px);
  gap: 2rem;
}

header a {
  color: white;
  text-decoration: none;
  font-size: 1rem;
  position: relative;
  transition: 0.3s ease all;
}

header a:not(.title):hover::after {
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  background: linear-gradient(to right, transparent, teal, transparent);
  bottom: -0.2rem;
}

header a div {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

header .heading {
  display: flex;
  align-items: center;
  flex-direction: column;
}

header .icon {
  height: 1.5rem;
  width: 1.5rem;
}
/* End Header section */

/* Form section */
form {
  width: calc(100% - 4rem);
  padding: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  transition: 0.3s ease all;
  gap: 2rem;
}

form input {
  background: #ffffff0f;
  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.1),
    5px 5px 10px rgba(0, 0, 0, 0.4);
  border: none;
  outline: none;
  color: unset;
  width: 40vw;
  padding: 1rem 2rem;
  border-radius: 12px;
  font-size: 1.5rem;
  backdrop-filter: blur(10px);
  text-align: center;
  transition: 0.3s ease all;
  position: relative;
}

form input.scrolled {
  position: fixed;
  top: 0;
  width: calc(100% - 2rem);
  border-radius: unset;
  z-index: 100;
}

form input:focus,
form input:hover {
  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.1),
    5px 5px 10px rgba(0, 0, 0, 0.4),
    inset -5px -5px 10px rgba(255, 255, 255, 0.1),
    inset 5px 5px 10px rgba(0, 0, 0, 0.4);
}

form input::placeholder {
  color: rgba(255, 255, 255, 0.5);
}

form input::before {
  content: "Type";
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 110;
}

form .filters {
  background: #ffffff0f;
  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.1),
    5px 5px 10px rgba(0, 0, 0, 0.4);
  border-radius: 20px;
  backdrop-filter: blur(5px);
  padding: 1rem 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  font-size: 1rem;
}

form .filters .button {
  border: none;
  background: transparent;
  font-size: 1rem;
  padding: 0.5rem 1rem;
  border-radius: 10px;
  transition: 0.3s ease all;
}

form .filters .button.active {
  box-shadow: 0px 0px 10px rgba(0, 255, 255, 0.3);
}
/* End Form section */

/* Result section */
.result {
  background: #ffffff0f;
  width: 65vw;
  border-radius: 40px;
  padding: 2rem;
  gap: 2rem;
  transition: 0.3s ease all;
}

.result .icons-number {
  font-size: 1rem;
}

.result ul {
  list-style: none;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 2rem;
}

.result ul li {
  width: 8rem;
  height: 8rem;
  gap: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  transition: 0.3s ease all;
  overflow: hidden;
}

.result ul li .icon {
  height: 3rem;
  width: 3rem;
}

.result ul li .tag {
  font-size: 0.65rem;
}

.result ul li .code {
  display: none;
}
/* End Result section */

/* No Result section */
.no_result {
  font-size: 1.5rem;
}
/* End No Result section */

/* Loading section */
.loading {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 300px;
  padding: 0 0 200px 0;
  font-size: 3rem;
  gap: 2rem;
}

.loading.hide {
  display: none;
}

.loading .loader {
  height: 3rem;
  width: 3rem;
  border: 10px solid gray;
  border-top-color: teal;
  border-radius: 50%;
  animation: 1s ease loading forwards infinite;
}
/* End Loading section */

/* Copy section */
.copied {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  animation: 0.3s ease show forwards;
  gap: 0.5rem;
  bottom: 1rem;
  padding: 0.5rem 1rem;
  backdrop-filter: blur(25px);
  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.1),
    5px 5px 10px rgba(0, 0, 0, 0.4);
  font-size: 1.25rem;
  z-index: 100;
  border-radius: 12px;
}

.copied.hide {
  animation: 0.3s ease hide forwards;
}
/* End Copy section */

/* Footer section */
footer {
  width: calc(100vw - 4rem);
  padding: 2rem;
  display: flex;
  margin: 2rem 0 0 0;
  align-items: flex-start;
  background: #ffffff0f;
  height: fit-content;
}

footer .col-title {
  height: 100%;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: column;
  gap: 1rem;
  flex: 1;
}

footer .col-title .title {
  text-align: start;
  font-size: 2rem;
}

footer .col-title .subtitle {
  text-align: start;
  font-size: 0.7rem;
  width: 300px;
}

footer .col-links,
footer .col-social {
  height: 100%;
  margin: 0.5rem 0 0 0;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: column;
  flex: 1;
}

footer .col-links ul,
footer .col-social ul {
  list-style: none;
  margin: 0.5rem 0 0 0;
}

footer .col-links ul li,
footer .col-social ul li {
  margin: 0.5rem 0 0 0;
  display: flex;
}

footer a {
  color: white;
  text-decoration: none;
  font-size: 0.7rem;
  position: relative;
  transition: 0.3s ease all;
}

footer a:hover::after {
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  background: linear-gradient(to right, transparent, teal, transparent);
  bottom: -0.2rem;
}

footer a div {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

footer a .icon {
  height: 1.5rem;
  width: 1.5rem;
}
/* End Footer section */

/* Animations */
@keyframes loading {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes show {
  0% {
    transform: translateY(100px);
  }

  100% {
    transform: translateY(0px);
  }
}

@keyframes hide {
  0% {
    transform: translateY(0);
  }

  100% {
    transform: translateY(100px);
  }
}

@keyframes click {
  0% {
    box-shadow: unset;
  }

  50% {
    box-shadow: inset -5px -5px 10px rgba(255, 255, 255, 0.15),
    inset 5px 5px 10px rgba(0, 0, 0, 0.6);
  }

  100% {
    box-shadow: unset;
  }
}
/* End Animations */

/* Medias */
@media only screen and (max-width: 960px) {
  .result {
    width: calc(100vw - 4rem);
    border-radius: 40px 40px 0 0;
  }

  footer {
    margin: unset;
  }
}

@media only screen and (max-width: 768px) {
  .title {
    font-size: 2rem;
  }

  .title .subtitle {
    font-size: 0.75rem;
  }

  header a {
    font-size: 0.75rem;
  }

  header a div {
    gap: 0.25rem;
  }

  form input {
    padding: 1rem;
    width: unset;
  }

  form .filters {
    padding: 1rem;
    width: unset;
  }

  .result {
    width: (100vw - 4rem);
    border-radius: 40px 40px 0 0;
  }

  .result ul {
    gap: 1.5rem;
  }

  .result ul {
    list-style: none;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 0.5rem;
  }
  
  .result ul li {
    background: #ffffff0f;
    width: calc(50vw - 4rem);
    height: 7.5rem;
    gap: 1rem;
    box-shadow: unset;
  }

  .result ul li:hover {
    box-shadow: unset;
    animation: 0.5s click forwards;
  }

  footer {
    flex-direction: column;
    gap: 3rem;
  }
}
/* End Medias */

